[tool.poetry]
name = "type-conversion"
version = "0.1.0"
description = ""
authors = ["Liberocks"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

